# dremio-arrow

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docs-site.conf  docs.Dockerfile  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  wait-for
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml  stagging.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  index.md  installation.md  usage-python.md  usage-r.md  usage.md
dremioarrow/: __init__.py  client.py
installation/: index.html
scripts/: bootstrap.py
search/: search_index.json
tests/: __init__.py  test_client.py
usage/: index.html
usage-python/: index.html
usage-r/: index.html
