[tool]
[tool.poetry]
name = "dremio-arrow"
version = "1.0.3"
homepage = "https://github.com/jaysnm/dremio-arrow"
description = "Dremio SQL Lakehouse Arrow Flight Client."
authors = ["Jason Kinyua <jaysnmury@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "dremioarrow" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyarrow = "^12.0.1"
pandas = "^2.0.3"

black = "^23.3.0"
isort = { version = "^5.12.0", optional = true }
flake8 = "5.0.4"
flake8-docstrings = { version = "^1.7.0", optional = true }
mypy = { version = "^1.4.1", optional = true }
pytest = { version = "^7.4.0", optional = true }
pytest-cov = { version = "^4.1.0", optional = true }

pre-commit = { version = "^3.3.3", optional = true }
bump2version = { version = "^1.0.1", optional = true }
virtualenv = { version = "20.13.2", optional = true }
requests = { version = "^2.31.0", optional = true }
types-requests = { version = "^2.31.0.1", optional = true }

mkdocs = { version = "^1.4.3", optional = true }
mkdocs-material = { version = "^9.1.18", optional = true }
mkdocstrings = { version = "^0.22.0", optional = true }
mkdocs-material-extensions = { version = "^1.1.1", optional = true }
mkdocs-git-revision-date-localized-plugin = { version = "^1.2.0", optional = true }
mkdocs-autorefs = { version = "^0.4.1", optional = true }

ipython = { version = "^8.14.0", optional = true }
jupyterlab = { version = "^4.0.2", optional = true }
tornado = "^6.3.2"
mkdocs-include-markdown-plugin = "^4.0.4"
mkdocstrings-python = "^1.1.2"


[tool.poetry.extras]
test = [
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "mypy",
    "pytest",
    "pytest-cov",
]
dev = [
    "pre-commit",
    "bump2version",
    "virtualenv",
    "tox",
    "requests",
    "types-requests",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-include-markdown-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-autorefs",
]
toy = ["ipython", "jupyterlab"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.pyright]
# please consider this a temporary fix for my M1 incompatibility issues with pyarrow package
reportGeneralTypeIssues = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
reportUnknownLambdaType = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
reportUntypedBaseClass = false
reportMissingImports = false
reportMissingParameterType = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
